--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
     <header>奇怪的小马维基</header>
     <nav>
-        <a href="#wiki">维基</a>
+        <a href="map.html">维基</a>
         <a href="#blog">博客</a>
         <a href="#about">关于</a>
     </nav>
@@ -63,12 +63,12 @@
         <div class="section" id="wiki">
             <h2>📖 维基</h2>
             <p>这里是“奇怪的小马维基”，收录了一些有趣的小马相关内容！</p>
-            <p><a href="你的维基链接">进入维基</a></p>
+            <p><a href="map.html">进入维基</a></p>
         </div>
         <div class="section" id="blog">
             <h2>✍️ 博客</h2>
             <p>在这里，我会写一些关于技术、创作和小马的文章。</p>
-            <p><a href="你的博客链接">查看博客</a></p>
+            <p><a href="blog">查看博客</a></p>
         </div>
         <div class="section" id="about">
             <h2>🌟 关于</h2>
