--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="奇怪的小马维基 - 小马爱好者的知识与博客">
     <meta property="og:description" content="探索小马相关知识、技术文章和兴趣分享，欢迎加入奇怪的小马维基！">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://kerybotu.github.io/"> <!-- 替换为你的实际 URL -->
+    <meta property="og:url" content="https://kerybotu.github.io/">
     <meta property="og:image" content="https://kerybotu.github.io/images/favicon.ico"> <!-- 替换为你的网站图标或图片 -->
     <!-- 规范化 URL，避免重复内容 -->
     <link rel="canonical" href="https://kerybotu.github.io/">    
