--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "奇怪的小马维基",
-        "url": "https://username.github.io/", <!-- 替换为你的实际 URL -->
+        "url": "https://kerybotu.github.io/",
         "description": "一个分享小马知识、技术文章和兴趣爱好的个人网站",
         "publisher": {
             "@type": "Person",
