--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         },
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://username.github.io/search?q={search_term_string}", <!-- 如果有搜索功能，替换为实际 URL -->
+            "target": "https://kerybotu.github.io/search?q={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
