批量优化 SEO 并使用 Jekyll

--- a/about.html
+++ b/about.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: "About - 奇怪的小马维基"
+description: "探索奇怪的小马维基的 about 页面内容"
+---
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
