--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: "Index - 奇怪的小马维基"
+description: "探索奇怪的小马维基的 index 页面内容"
+---
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
