--- a/wiki/平等村独立运动.html
+++ b/wiki/平等村独立运动.html
@@ -1,25 +1,9 @@
-
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>平等村独立运动</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 20px; background-color: #f4f4f4; color: #333; }
-        .container { max-width: 800px; margin: 0 auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
-        h1, h2, h3 { color: #2c3e50; }
-        h1 { border-bottom: 2px solid #3498db; padding-bottom: 10px; }
-        h2 { border-bottom: 1px solid #ecf0f1; padding-bottom: 5px; }
-        ul, ol { padding-left: 20px; }
-        a { color: #3498db; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-        p { margin: 10px 0; }
-        strong { color: #e74c3c; }
-    </style>
-</head>
-<body>
-    <div class="container">
+---
+layout: default
+title: "平等村独立运动 - 奇怪的小马维基"
+description: "探索奇怪的小马维基的 平等村独立运动 页面内容，了解更多关于小马知识和技术博客的信息。"
+---
+<div class="container">
         <h1>平等村独立运动</h1>
         
 <p>
@@ -225,5 +209,3 @@ Mark），以换取绝对平等。
 </p>
 
     </div>
-</body>
-</html>
